# doppio

./: Cargo.toml  README.md
benches/: fq_bench.rs  fr_bench.rs  point_bench.rs
src/: affine.rs  completed.rs  curveconstants.rs  extended.rs  fq.rs  fqconstants.rs  fr.rs  frconstants.rs  lib.rs
