[package]
authors = [""]
description = "Implementation of the doppio elliptic curve group"
license = "MIT/Apache-2.0"
name = "doppio"
repository = "https://github.com/decentralisedkev/doppio"
version = "0.1.0"
edition = "2018"

[dependencies.byteorder]
version = "1"
default-features = false

[dependencies.subtle]
version = "2"
default-features = false

[dev-dependencies.rand_core]
version = "0.4"
default-features = false

[dev-dependencies.rand_xorshift]
version = "0.1"
default-features = false

[features]
default = ["std"]
nightly = ["subtle/nightly"]
std = []
